<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleJingDong</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">搜索</string>
    <string name="news">消息</string><string name="home">主页</string>
    <string name="main">我的</string>
    <string name="shopping_cart">购物车</string>
    <string name="classify">分类</string>
    <string name="hot_goods">热门推荐</string>
    <string name="tui_jian">推荐商品</string>
    <string name="market">超市</string>
    <string name="scan">扫啊扫</string>
    <string name="activity">活动专场图片</string>
    <string name="class_image">分类图片</string>
    <string name="find">发&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;现</string>
    <string name="story01">故事</string>
    <string name="story02">好物分享，福利多多</string>
    <string name="worth01">值得买</string>
    <string name="worth02">买的值</string>
    <string name="stroll01">逛逛</string>
    <string name="stroll02">逛出精彩</string>
    <string name="dynamic01">店铺动态</string>
    <string name="dynamic02">找优惠，买新款</string>
    <string name="scan01">扫啊扫</string>
    <string name="scan02"></string>
    <string name="phout_to_shopping1">拍照购物</string>
    <string name="phout_to_shopping2"></string>
    <string name="ice01">小冰</string>
    <string name="ice02"></string>
    <string name="case01">百宝箱</string>
    <string name="case02">变</string>
    <string name="mine">我的京东</string>
    <string name="concern_goods">关注的商品</string>
    <string name="concern_shops">关注的店铺</string>
    <string name="history">浏览记录</string>
    <string name="my_orders">我的订单</string>

</resources>
